# ctbmodules

./: CMakeLists.txt
.github/workflows/: dunedaq-develop-cpp-ci.yml  track_new_issues.yml
cmake/: ctbmodulesConfig.cmake.in
docs/: README.md
plugins/: CTBModule.cpp  CTBModule.hpp
python/ctbmodules/apps/: ctb_hsi_gen.py
python/ctbmodules/boardcontrollerapp/: boardcontrollerapp_gen.py
schema/ctbmodules/: confgen.jsonnet  ctbmodule.jsonnet  ctbmoduleinfo.jsonnet
scripts/: ctbcontrollerconf_gen.py
src/: CTBModuleIssues.hpp  CTBPacketContent.hpp
